styles/Navigation.module.css
.header {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 1rem;
}

.header p {
  font-size: 1rem;
  font-weight: bold;
}

[data-theme="light"] .header p {
  color: black;
}

[data-theme="dark"] .header p {
  color: white;
}

.header span {
  color: #e0642f;
}

.nav {
  display: none;
}

.mobileNav {
  position: absolute;
  display: flex;
  flex-direction: column;
  bottom: 15px;
  left: 15px;
  background-color: black;
  transform: translateY(100%);
  border: 1px solid lightgray;
}

.mobileNav a {
  border-bottom: 1px solid gray;
  padding: 4px 3px;
  font-size: 0.8rem;
  color: white;
  font-weight: bold;
}

.hidden {
  display: none;
}

.themeSwitch,
.menuToggle {
  cursor: pointer;
}

[data-theme="light"] .menuToggle {
  color: black;
}

[data-theme="dark"] .menuToggle {
  color: white;
}

@media screen and (min-width: 768px) {
  .header {
    margin: 0 auto;
    max-width: 90%;
  }

  .header p {
    font-size: 1.1rem;
  }

  .header span {
    color: #e0642f;
  }

  .menuToggle,
  .mobileNav,
  .themeSwitch {
    display: none;
  }

  .nav {
    display: flex;
    align-items: center;
    gap: 1.5rem;
    font-size: 0.9rem;
  }

  .nav a {
    font-size: 0.9rem;
    font-weight: 600;
    cursor: pointer;
    text-transform: uppercase;
  }

  .nav a:hover {
    color: #e0642f;
  }
}

@media screen and (min-width: 1024px) {
  .header {
    max-width: 80%;
    padding: 2rem 5rem;
  }
}

@media screen and (min-width: 1200px) {
  .header {
    max-width: 70%;
  }
}

